--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Distributed DataBase</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="dx.common.css"/>
+    <link rel="stylesheet" type="text/css" href="dx.light.css"/>
+    <script src="dx.all.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
-<body>
+<body class="dx-viewport">
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -25,10 +31,10 @@
             <div class="form-group col-md-4">
                 <label>Select Algorithm:</label>
                 <div class="radio">
-                    <label><input type="radio" name="optradio" checked>Merge All</label>
+                    <label><input type="radio" value="mergeAllSort" name="algorithm" checked>Merge All</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio">Option 2</label>
+                    <label><input type="radio" value="binaryMergeAllSort" name="algorithm">Option 2</label>
                 </div>
             </div>
             <div class="form-group col-md-4">
@@ -39,6 +45,12 @@
                 <button type="button" id="fetchData" class="btn btn-primary">Primary</button>
             </div>
         </form>
+    </div>
+
+    <div class="row">
+        <div class="demo-container">
+            <div id="chart"></div>
+        </div>
     </div>
 </div>
 <script src="main.js"></script>
