--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,13 +39,16 @@
                 <div class="radio">
                     <label><input type="radio" value="parallelPartitionedSort" name="algorithm">Parallel Partitioned Sort</label>
                 </div>
+                <div class="radio">
+                    <label><input type="radio" value="binaryMergeSort" name="binaryMergeSort">binaryMergeSort</label>
+                </div>
             </div>
             <div class="form-group col-md-4">
                 <label for="number">Cores:</label>
-                <input type="number" id="number" class="form-control" min="1" data-bind="value:number"/>
+                <input type="number" id="number" class="form-control" min="0" data-bind="value:number"/>
             </div>
             <div class="form-group col-md-4">
-                <button type="button" id="fetchData" class="btn btn-primary">Compute</button>
+                <button type="button" id="fetchData" class="btn btn-primary">Primary</button>
             </div>
         </form>
     </div>
