--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,13 +34,16 @@
                     <label><input type="radio" value="mergeAllSort" name="algorithm" checked>Merge All</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" value="redistributionMergeAllSort" name="algorithm">Redistribution Merge All</label>
+                    <label><input type="radio" value="redistributionMergeAllSort" name="algorithm" checked>Redistribution Merge All</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" value="parallelPartitionedSort" name="algorithm">Parallel Partitioned Sort</label>
+                    <label><input type="radio" value="parallelPartitionedSort" name="algorithm" checked>Parallel Partitioned Sort</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" value="binaryMergeSort" name="binaryMergeSort">binaryMergeSort</label>
+                    <label><input type="radio" value="binaryMergeSort" name="algorithm" checked>binaryMergeSort</label>
+                </div>
+                <div class="radio">
+                    <label><input type="radio" value="redistributionBinaryMergeSort" name="algorithm" checked>redistributionBinaryMergeSort</label>
                 </div>
             </div>
             <div class="form-group col-md-4">
