--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,12 +29,12 @@
     <div class="row">
         <form class="form-inline">
             <div class="form-group col-md-5">
-                <label for="Cores">algorithm:</label>
-                <div id="algorithm"></div>
+                <label for="algorithm">algorithm:</label>
+                <span id="algorithm"></span>
             </div>
             <div class="form-group col-md-5">
                 <label for="Cores">Cores:</label>
-                <div id="Cores"></div>
+                <span id="Cores"></span>
             </div>
             <div class="form-group col-md-2">
                 <button type="button" id="fetchData" class="btn btn-primary">calculate</button>
