--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,6 +45,9 @@
                 <div id="chart"></div>
             </div>
         </div>
+        <div class="demo-container">
+            <div id="pie"></div>
+        </div>
     </div>
 
 
