--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,11 +40,19 @@
                 <button type="button" id="fetchData" class="btn btn-primary">calculate</button>
             </div>
         </form>
-        <div>
-            <div class="demo-container">
-                <div id="chart"></div>
-            </div>
+        <!--<div>-->
+            <!--<div class="demo-container">-->
+                <!--<div id="chart"></div>-->
+            <!--</div>-->
+        <!--</div>-->
+
+    </div>
+    <div class="row">
+        <div class="demo-container">
+            <div id="chart"></div>
         </div>
+    </div>
+    <div class="row">
         <div class="demo-container">
             <div id="pie"></div>
         </div>
