--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,12 +48,12 @@
 
     </div>
     <div class="row">
-        <div class="demo-container">
+        <div id="parentChart"  class="demo-container">
             <div id="chart"></div>
         </div>
     </div>
     <div class="row">
-        <div class="demo-container">
+        <div id="parentpie"   class="demo-container">
             <div id="pie"></div>
         </div>
     </div>
