--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,16 +28,27 @@
 <div class="container">
     <div class="row">
         <form class="form-inline">
-            <div class="form-group col-md-5">
+            <div class="form-group col-md-2">
                 <label for="algorithm">algorithm:</label>
                 <span id="algorithm"></span>
             </div>
-            <div class="form-group col-md-5">
+            <div class="form-group col-md-2">
                 <label for="Cores">Cores:</label>
                 <span id="Cores"></span>
             </div>
             <div class="form-group col-md-2">
+                <label for="spark">saprk:</label>
+                <span id="spark"></span>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="spark">word:</label>
+                <span id="word"></span>
+            </div>
+            <div class="form-group col-md-2">
                 <button type="button" id="fetchData" class="btn btn-primary">calculate</button>
+            </div>
+            <div class="form-group col-md-2">
+                <button type="button" id="spark_button" class="btn btn-primary">calculate_spark</button>
             </div>
         </form>
         <!--<div>-->
